# blksnap

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  bitmap_sync.c  bitmap_sync.h  blk-snap-ctl.h  blk_deferred.c  blk_descr_mem.c  blk_descr_mem.h  blk_descr_pool.c  blk_descr_pool.h  blk_direct.h  blk_util.h  cbt_map.h  cbt_notify.c  cbt_notify.h  cbt_params.h  cbt_persistent.h  cbt_storage.c  container.c  container_spinlocking.c  ctrl_fops.c  ctrl_pipe.c  ctrl_sysfs.h  defer_io.c  defer_io.h  ext4_check.h  log.c  main.c  mem_alloc.c  mem_alloc.h  page_array.h  queue_spinlocking.c  rangelist.h  rangelist_ex.c  rangelist_ex.h  rangevector.c  (+15 more)
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: Bug_report.yml  Feature_request.yml  bug_report.md
.github/workflows/: Kernel-module.yml  Linux.yml  build-other-archs.yml  build.yml  codespell.yml
cmake/: cmake_uninstall.cmake.in
doc/: DEBUGGING.md  README-upstream-kernel.md  Something-wrong-with-snapshots-for-Linux.md  Something-wrong-with-snapshots-for-Linux_ru.md  Specification  bdev_filter.md  bdev_filter_ru.md  blkfilter.rst  blkfilter_ru.rst  blksnap.8  blksnap.md  blksnap.rst  blksnap_ru.md  blksnap_ru.rst  specification.md
doc/tests/: boundary.md  boundary_ru.md  corrupt.md  corrupt_ru.md  diff_storage.md  diff_storage_ru.md
examples/: snapshot_errno.cpp  stretch_snapstore_create.cpp  tracking_add.cpp
include/blk-snap/: blk-snap-ctl.h  snapshot_ctl.h  stretch_snapshot_ctrl.h  types.h
include/blksnap/: Blksnap.h  Cbt.h  OpenFileHolder.h  Sector.h  Service.h  Session.h  Snapshot.h  SnapshotCtl.h  SnapshotId.h  Tracker.h  TrackerCtl.h  (+5 more)
lib/: CMakeLists.txt  snapshot_ctl.c  snapshot_ioctl.h  stretch_module_response.h  stretch_snapshot.c  stretch_snapshot_ctx.h  stretch_snapshot_impl.c  stretch_snapshot_impl.h  utils.c  utils.h
lib/blksnap/: Blksnap.cpp  CMakeLists.txt  Cbt.cpp  OpenFileHolder.cpp  Service.cpp  Session.cpp  Snapshot.cpp  SnapshotCtl.cpp  Tracker.cpp  TrackerCtl.cpp
libcpp/: CMakeLists.txt
libcpp/include/blk-snap-cpp/: BlkSnapCtx.h  BlkSnapStoreCtx.h  FileSnapshotStore.h  Helper.h
libcpp/src/: BlkSnapCtx.cpp  BlkSnapStoreCtx.cpp  FdHolder.h  FileSnapshotStore.cpp  Helper.cpp  Snapshot.cpp  Uuid.cpp
module/: .clang-format  .gitignore  Kconfig  Makefile  Makefile-bdevfilter  Makefile-config  Makefile-lp  Makefile-standalone  bdevfilter-internal.h  bdevfilter.c  bdevfilter.h  big_buffer.c  big_buffer.h  bitmap_sync.c  blk-snap-ctl.h  blk_deferred.c  blk_deferred.h  blk_descr_array.c  blk_descr_array.h  blk_descr_file.c  blk_descr_file.h  blk_descr_mem.c  blk_descr_mem.h  blk_descr_multidev.c  blk_descr_multidev.h  blk_descr_pool.c  blk_descr_pool.h  blk_descr_unify.h  blk_direct.c  blk_direct.h  blk_redirect.c  blk_redirect.h  blk_snap.h  blk_util.c  blk_util.h  blksnap.h  cbt_checkfs.c  cbt_checkfs.h  cbt_map.c  cbt_map.h  (+102 more)
patches/: blk-filter_2_v5.9.patch  blk_interposer_v5.9.patch  blksnap_lk6.1-rc1.patch
pkg/: blk-snap.dkms  blksnap.dkms  build_functions.sh
tests/: 1000-simple.sh  1100-loop_diff_storage.sh  1200-tmpfs_diff_storage.sh  1300-tmpfile_diff_storage.h  1300-tmpfile_diff_storage.sh  1400-simple.sh  2000-stretch.sh  2100-overflow.sh  3000-cbt.sh  4000-diff_storage.sh  5000-pullout.sh  6000-snapimage_write.sh  6100-snapimage_write.sh  7000-destroy.sh  8000-inline-encryption.sh  8000-perf_cow.sh  8100-perf_snapshot_read.sh  9000-two_snapshots.sh  CMakeLists.txt  CommonSnapStoreTest.cpp  CommonSnapStoreTest.h  LoopTests.cpp  TestConfig.cpp  TestConfig.h  TestInMemorySnapshot.cpp  all.sh  all_tests_without_build.sh  blksnap.sh  build_and_install.sh  fio-1000-sequental_read.sh  functions.sh  main.cpp  make_loop_dev.sh  manual.sh  mod_2000-stretch.sh  mod_blksnap.sh  simpleTest.sh  unload.sh
tests/bash/: 0000-functions.sh  0010-blksnap.sh  1000-simple.sh  2000-stretch.sh  3000-cbt.sh  all.sh  blksnap.sh  build_and_install.sh  functions.sh  manual.sh  simpleTest.sh  unload.sh
tests/cpp/: CMakeLists.txt  TestFileSnapshot.cpp  TestInMemorySnapshot.cpp  TestSector.cpp  TestSector.h  border.cpp  boundary.cpp  cbt.cpp  corrupt.cpp  diff_storage.cpp  main.cpp  performance.cpp
tests/cpp/blksnap/: Blksnap.cpp  Blksnap.h  BlksnapSession.cpp  BlksnapSession.h  CMakeLists.txt  Cbt.cpp  Cbt.h  DeviceId.h  Service.cpp  Service.h  Session.cpp
tests/cpp/helpers/: AlignedBuffer.hpp  BlksnapHelper.cpp  BlksnapHelper.h  BlockDevice.cpp  BlockDevice.h  CMakeLists.txt  CheckSumHelper.cpp  CheckSumHelper.h  Device.h  DeviceId.h  FileHelper.cpp  FileHelper.h  FsHelper.cpp  FsHelper.h  Log.cpp  Log.h  LoopDevice.cpp  LoopDevice.h  MountPoint.cpp  MountPoint.h  RandomHelper.cpp  RandomHelper.h  SHA256Calc.cpp  SHA256Calc.h  SnapshotHelper.cpp  SnapshotHelper.h  Uuid.cpp  Uuid.h
tests/fio/: 1000-sequental_read.sh  1010-sequental_read_4k.sh  1100-random_read.sh  1110-random_read_4k.sh  2000-cow.sh  blksnap.fio
tests/helpers/: FileHelper.h  LoopDevice.h  MountPoint.cpp  MountPoint.h  SnapshotHelper.cpp
tools/: include_guard_gen.sh
tools/blksnap/: .clang-format  CMakeLists.txt  main.cpp
utils/: ArgsProcessor.cpp  ArgsProcessor.h  BlkSnapCtx.h  BlkSnapStoreCtx.cpp  BlkSnapStoreCtx.h  CMakeLists.txt  GeneralArgs.h  Helper.cpp  Helper.h  Snapshot.cpp  Snapshot.h  Uuid.cpp  Uuid.h  add_to_tracking.cpp  create_file_snapstore.cpp  create_inmemory_snapstore.cpp  create_snapshot.cpp  create_snapstore.cpp  create_stretch_snapshot.cpp  destroy_snapshot.cpp  file_snapstore_create.cpp  get_tracking.cpp  get_tracking_block_size.cpp  helper.h  read_cbt.cpp  remove_from_tracking.cpp  snapshot_get_errno.cpp  snapshot_store_cleanup.cpp  tracking_get.cpp  tracking_remove.cpp
utils/blk-snap-old/: BlkSnapCtx.cpp  BlkSnapStoreCtx.cpp  CMakeLists.txt  Helper.h  main.cpp
utils/blk-snap-old/commands/snapshot/: CreateSnapshotArgs.h
utils/blksnap/: CMakeLists.txt  main.cpp
utils/commands/: ICommandArgsProcessor.h
utils/commands/snapshot/: CreateSnapshotArgs.cpp
utils/commands/store/: InMemorySnapshotStore.cpp  InMemorySnapshotStore.h  InMemoryStoreArgs.cpp  InMemoryStoreArgs.h
(+329 files in other folders)
