set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -no-pie -static-libstdc++ -static-libgcc")

add_executable(tracking_add tracking_add.cpp)
target_link_libraries(tracking_add BlkSnapLib)

add_executable(tracking_remove tracking_remove.cpp)
target_link_libraries(tracking_remove BlkSnapLib)

add_executable(tracking_get tracking_get.cpp)
target_link_libraries(tracking_get BlkSnapLib)

add_executable(tracking_block_size tracking_block_size.cpp)
target_link_libraries(tracking_block_size BlkSnapLib)

add_executable(tracking_read tracking_read.cpp)
target_link_libraries(tracking_read BlkSnapLib)

add_executable(snapshot_create snapshot_create.cpp)
target_link_libraries(snapshot_create BlkSnapLib)

add_executable(snapshot_destroy snapshot_destroy.cpp)
target_link_libraries(snapshot_destroy BlkSnapLib)

add_executable(snapshot_errno snapshot_errno.cpp)
target_link_libraries(snapshot_errno BlkSnapLib)

add_executable(snapshot_store_cleanup snapshot_store_cleanup.cpp)
target_link_libraries(snapshot_store_cleanup BlkSnapLib)

add_executable(file_snapstore_create file_snapstore_create.cpp)
target_link_libraries(file_snapstore_create BlkSnapLib)

add_executable(inmemory_snapstore_create inmemory_snapstore_create.cpp)
target_link_libraries(inmemory_snapstore_create BlkSnapLib)

add_executable(stretch_snapstore_create stretch_snapstore_create.cpp)
target_link_libraries(stretch_snapstore_create BlkSnapLib)